--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "cookie": "^1.0.2",
+    "date-fns": "^4.1.0",
     "next": "15.3.2",
     "next-pwa": "^5.6.0",
     "nookies": "^2.5.2",
